--- a/flashcard/index.html
+++ b/flashcard/index.html
@@ -7,10 +7,23 @@
 </head>
 <body> 
     <main>
-
+<section id="container">
+    <article class="cartao">
+        <div class="cartao__conteudo">
+            <h3>Programação
+                <div class="cartap__conteudo__pergunta">
+                    O que é JavaScript?
+                </div>
+                <div class="cartao__conteudo__resposta">
+                    O JavaScript é uma linguagem de programação
+                </div>
+            </h3>
+        </div>
+    </article>
+</section>
     </main>
     <footer>
-
+<p>projeto feito no alura com fins lucrativos se possível</p>
     </footer>
     
 </body>
