--- a/flashcard/index.html
+++ b/flashcard/index.html
@@ -10,7 +10,7 @@
 <section id="container">
     <article class="cartao">
         <div class="cartao__conteudo">
-            <h3>Programação
+            <h3>Programação</h3>
                 <div class="cartap__conteudo__pergunta">
                     O que é JavaScript?
                 </div>
@@ -28,3 +28,15 @@
     
 </body>
 </html>
+<article class="cartao">
+    <div class="cartao__conteudo">
+        <h3>/h3>
+            <div class="cartap__conteudo__pergunta">
+                O que é CSS?
+            </div>
+            <div class="cartao__conteudo__resposta">
+                O JavaScript é uma linguagem de programação
+            </div>
+        </h3>
+    </div>
+</article>
