--- a/flashcard/index.html
+++ b/flashcard/index.html
@@ -11,7 +11,7 @@
     <article class="cartao">
         <div class="cartao__conteudo">
             <h3>Programação</h3>
-                <div class="cartap__conteudo__pergunta">
+                <div class="cartao__conteudo__pergunta">
                     O que é JavaScript?
                 </div>
                 <div class="cartao__conteudo__resposta">
@@ -30,12 +30,12 @@
 </html>
 <article class="cartao">
     <div class="cartao__conteudo">
-        <h3>/h3>
-            <div class="cartap__conteudo__pergunta">
+        <h3>Programação</h3>
+            <div class="cartao__conteudo__pergunta">
                 O que é CSS?
             </div>
             <div class="cartao__conteudo__resposta">
-                O JavaScript é uma linguagem de programação
+                O CSS é uma linguagem de estilização
             </div>
         </h3>
     </div>
